Fixed nav spacing.

--- a/apollo/src/components/Navigation.css
+++ b/apollo/src/components/Navigation.css
@@ -32,7 +32,6 @@
   padding-bottom: 0px;
   margin-bottom: 0;
   transition: 0.3s ease-in-out;
-  width: 3%;
 }
 
 .links:hover {
